--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -66,7 +66,7 @@
 }
 
 .home-scroll__spacer {
-  min-height: calc(var(--app-vh, 1vh) * 100);
+  min-height: var(--app-safe-height);
   height: auto;
 }
 
